@@ -15,6 +15,7 @@ Version 1.11.13+dev:
    * Fix bug #21372: fix unit move continuation if enemy discovered
    * Micro AIs: a few more fixes of subtle or rarely occurring bugs in Hang Out
      MAI and AI helper libraries
+   * Fix bug #22030: correct index of weapon special disable in attack GUI
 
 Version 1.11.13:
  * AI:
